[package]
name = "sysclean"
version = "2.0.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "Advanced system cleaner for Linux - DNF, APT, Flatpak & Browser cleanup"
license = "MIT"

[[bin]]
name = "sysclean"
path = "src/main.rs"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
walkdir = "2.4"
which = "6.0"
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
futures = "0.3"
eframe = "0.33.3"
egui = "0.33.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
